--- a/test/index.html
+++ b/test/index.html
@@ -42,7 +42,7 @@
               //  min: 0, // 最小値と最大値
               //  max: 400
               suggestedMin: 0,
-              saggestedMax: 400, // 数値が超えても調整してくれる
+              suggestedMax: 400, // 数値が超えても調整してくれる
               // stepSize: 100, // 100刻みにしてくれる
               // callback: function(value, index, values) {
               //   return 'JPY ' + value; // 単位をつける
@@ -54,7 +54,7 @@
             }, {
               ticks: {
                 suggestedMin: 0,
-                saggestedMax: 2000, 
+                suggestedMax: 2000, 
               },
               id: 'subscribers_axes',
               type: 'linear',
